Issue 16152 - Wiki search box layout breaks: "suchen" button breaks into next line
git-svn-id: http://halodev.ontoprise.com/svn/HaloSMWExtension/trunk@12869 f80b7aa0-dfcc-4e65-a0d9-74108174cbc8

--- a/skins/ontoskin3/css/skin-main.css
+++ b/skins/ontoskin3/css/skin-main.css
@@ -83,7 +83,7 @@ textarea {
 }
 
 #smwh_search{
-	width: 590px;
+	width: 610px;
     height: 40px;
     float: right;
     position: absolute;
